--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,35 @@
+attrs==23.2.0
+certifi==2024.2.2
 click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
+cycler==0.11.0
+fiona==1.9.6
 Flask==2.2.5
+Flask-Cors==4.0.0
+fonttools==4.38.0
+geopandas==0.10.2
 gunicorn==21.2.0
+gurobipy==10.0.3
 importlib-metadata==6.7.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
+matplotlib==3.5.3
+numpy==1.21.6
 packaging==24.0
-typing-extensions==4.7.1
+pandas==1.3.5
+Pillow==9.5.0
+pygeos==0.14
+pyparsing==3.1.2
+pyproj==3.2.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+Rtree==1.0.1
+shapely==2.0.3
+six==1.16.0
+typing_extensions==4.7.1
 Werkzeug==2.2.3
 zipp==3.15.0
-
