--- a/Zone_Generation/Config/config.yaml
+++ b/Zone_Generation/Config/config.yaml
@@ -5,7 +5,7 @@ frl_dev: 1
 racial_dev: 1
 
 boundary_threshold: .05
-shortage: 0.3 # this is in percentage
+shortage: 0.2 # this is in percentage
 overage: .inf # this is in percentage
 all_cap_shortage: .inf # this is in percentage
 #max_distance: .inf # best valid value for 59 zines: 1.272
@@ -21,4 +21,4 @@ drop_optout: True
 capacity_scenario: "A"
 new_schools: True
 include_k8: False
-level: "attendance_area"  # 'Block', 'BlockGroup' or 'attendance_area'
+level: "BlockGroup"  # 'Block', 'BlockGroup' or 'attendance_area'
