--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 attrs==23.2.0
 certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
@@ -10,6 +11,7 @@ Flask-Cors==4.0.0
 fonttools==4.38.0
 geopandas==0.10.2
 gunicorn==21.2.0
+idna==3.7
 importlib-metadata==6.7.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -18,15 +20,16 @@ MarkupSafe==2.1.5
 numpy==1.26.4
 packaging==24.0
 pandas==1.3.5
-pygeos==0.14
 pyparsing==3.1.2
 pyproj==3.6.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
+requests==2.31.0
 Rtree==1.0.1
 shapely==2.0.3
 six==1.16.0
 typing_extensions==4.7.1
+urllib3==2.2.1
 Werkzeug==2.2.3
 zipp==3.15.0
